@@ -122,6 +122,7 @@ Version 1.3-svn:
      * added dwarvish walking corpse/soulless variations
    * added a generic macro to have a standard filter for all idle anim
    * fixed a bug which prevented a Mermaid Siren picking up a storm trident
+   * fixed a bug which caused the slow effect being applied twice (bug #8458)
  * user interface
    * use "Save Replay" instead of "Save Game" when asking to save a replay
      (bug #7256)
